Including custom search of the movements
